--- a/google-singin-demo/package.json
+++ b/google-singin-demo/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.5.3"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
   }
 }
